name:                eggvisor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mstksg/eggvisor#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Egg.Types
                       Egg.Research
                       Egg.Habitat
                       Egg.Vehicle
                       Egg.Egg
                       Egg.GameData
  other-modules:       Data.Type.Combinator.Util
                       Data.Vector.Sized.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , dependent-map
                     , dependent-sum
                     , finite-typelits
                     , lens
                     , lens-aeson
                     , singletons
                     , text
                     , transformers
                     , type-combinators
                     , type-combinators-singletons
                     , unordered-containers
                     , vector
                     , vector-sized
                     , yaml
  ghc-options:         -Wall
  default-language:    Haskell2010

-- executable eggvisor-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , eggvisor
--   default-language:    Haskell2010

-- test-suite eggvisor-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , eggvisor
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/eggvisor
