name:                eggvisor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mstksg/eggvisor#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Egg
                       Egg.Action
                       Egg.Commodity
                       Egg.Egg
                       Egg.Farm
                       Egg.GameData
                       Egg.Habitat
                       Egg.Research
                       Egg.Search
                       Egg.Vehicle
                       Data.Vector.Sized.Util
  other-modules:       Data.Type.Combinator.Util
                       Data.Singletons.Util
                       Data.Finite.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , constraints
                     , containers
                     , dependent-map
                     , dependent-sum
                     , finite-typelits
                     , lens
                     , pqueue
                     , reflection
                     , singletons
                     , statistics-linreg
                     , text
                     , transformers
                     , type-combinators
                     , type-combinators-singletons
                     , unordered-containers
                     , vector
                     , vector-sized
                     , yaml
  ghc-options:         -Wall
  default-language:    Haskell2010

executable eggvisor-sim-terminal
  hs-source-dirs:      app
  main-is:             SimTerminal.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base >= 4.9
                     , aeson
                     , ansi-wl-pprint
                     , auto
                     , brick >= 0.19
                     , eggvisor
                     , finite-typelits
                     , lens
                     , profunctors
                     , singletons
                     , text
                     , transformers
                     , type-combinators
                     , typelits-witnesses
                     , vector
                     , vty
                     , yaml
  default-language:    Haskell2010

executable eggvisor-plan
  hs-source-dirs:      app
  main-is:             Plan.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base >= 4.9
                     , eggvisor
                     , optparse-applicative
                     , transformers
                     , type-combinators
                     , typelits-witnesses
                     , yaml
  default-language:    Haskell2010

executable eggvisor-edit
  hs-source-dirs:      app
  main-is:             Edit.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base >= 4.9
                     , brick >= 0.19
                     , eggvisor
                     , finite-typelits
                     , free
                     , lens
                     , refined
                     , reflection
                     , text
                     , transformers
                     , type-combinators
                     , vector
                     , vector-sized
                     , vty
                     -- , optparse-applicative
                     -- , transformers
                     -- , type-combinators
                     -- , typelits-witnesses
                     -- , yaml
  default-language:    Haskell2010


-- executable eggvisor-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , eggvisor
--   default-language:    Haskell2010

-- test-suite eggvisor-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , eggvisor
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/eggvisor
